# taspa

./: Makefile.in  ProjectHome.md  README  aclocal.m4  config.h.in  configure  configure.ac  polygon.workspace
src/: Makefile.am  Makefile.in  gmon.out  make_makefile  taspa.cc  taspa.layout  taspa_project.cbp  taspa_project.cbp.save  taspa_project.depend  taspa_project.layout  taspa_project.layout.save
src/bitmap/: basic_bitmap.cpp  basic_bitmap.h  bitmap.cpp  bitmap.h  bitmap_typedef.cpp  bitmap_typedef.hpp  bmp.cpp  bmp.h  distillers.cpp  distillers.h  indexed_bitmap.cpp  indexed_bitmap.h  jpeg.cpp  jpeg.h  matrix.h  monochrome_bitmap.cpp  monochrome_bitmap.h  rgb.cpp  rgb.h  rgb_bitmap.cpp  rgb_bitmap.h  rgb_float.h  rgba.h  stats.h  stats.h~
src/exception/: catch_all_exception.hpp
src/location/: location.cpp  location.hpp
src/math/: int_math.h
src/polygon/: AdjacencyMatrix.cpp  AdjacencyMatrix.h  math_vector.hpp  polygon.cpp  polygon.hpp
src/region/: SquareLatticeWalker.cpp  SquareLatticeWalker.h  region.cpp  region.h  region_bounds.hpp
src/std_extensions/: iterative_fstream.h  set_operations.cpp  set_operations.h  stream_objects.cpp  stream_objects.h
src/stopwatch/: Stopwatch.cpp  Stopwatch.h
src/thorup/: Graph.h  PathMatrix.cpp  PathMatrix.h  README  ch.h  chnode.h  countingsort.h  kruskal.h  parse.h  thorup.cpp  thorup.h  timer.h  unionfind.h
src/user_interface/: ui.cpp  ui.h
src/word/: CellularWord.cpp  CellularWord.h  CurveWord.cpp  CurveWord.h  IntermediateCurveWord.cpp  IntermediateCurveWord.h  PatternWord.cpp  PatternWord.h  PotentialLine.cpp  PotentialLine.h  Stair.h
